# python-dbdiff

./: .gitignore  LICENSE  README.md  main.py  maindata.py  pyproject.toml  pytest.ini  requirements.txt
datacompare/: tablediff.py
schema/: __init__.py  compare.py  mysql.py
src/: main.py  maindata.py
src/datacompare/: dbscan.py  tablediff.py
src/dbdiff/schema/: __init__.py  compare.py  mysql.py  postgres.py
src/schema/: mysql.py  postgres.py
tests/: conftest.py  test1.env.txt  test_credential_files.py  test_mysql_model.py  test_schema_compare.py
util/: database_credentials.py
