[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dbdiff"
dynamic = ["version"]
description = "Tools to compare database schemas and table rows."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "click",
    "mysql-connector-python",
    "psycopg[binary]",
    "python-dotenv",
]

[project.scripts]
schemadiff = "main:schemadiff"
datadiff = "maindata:datadiff"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["version"]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["datacompare", "dbdiff", "dbdiff.*", "util"]

[project.urls]
Repository = "https://github.com/example/python-dbdiff"

